[workspace]
members = ["serverness", "serverness-cli", "serverness-httpmock", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Art Semyonov"]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.88"
base64 = "0.22.1"
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
env_logger = "0.11.7"
toml = "0.8.20"
toml_edit = "0.22.24"
ctrlc = "3.4.5"
indoc = "2.0.5"
url = "2.5.4"
log = "0.4.26"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.30", features = [
  "derive",
  "string",
  "env",
  "wrap_help",
] }
dropshot = { version = "0.16.0" }
progenitor = { git = "https://github.com/serverness/progenitor.git", branch = "nushell", default-features = false }
progenitor-client = "0.9.1"
serde = "1.0.217"
serde_json = "1.0.138"
newline-converter = "0.3.0"
decimal = "2.1.0"
regex = "1.11.1"
rustfmt-wrapper = "0.2.1"
regress = "0.10.3"
reqwest = "0.12.12"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
schemars = { version = "0.8.21", features = [
  "bigdecimal04",
  "chrono",
  "derive",
  "uuid",
  "uuid1",
] }
uuid = { version = "1.13.2", features = ["v7", "serde"] }
serverness = { path = "serverness" }
nu-protocol = { git = "https://github.com/serverness/nushell.git", branch = "uuid" }
