[package]
name = "serverness-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "serverness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
base64 = "0.22.1"
chrono.workspace = true
clap.workspace = true
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
env_logger = "0.11.7"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
toml_edit = "0.22.24"
url = "2.5.4"
uuid.workspace = true
serverness.workspace = true
log = "0.4.26"
reqwest.workspace = true
futures.workspace = true
schemars.workspace = true

[dev-dependencies]
dropshot = "0.16.0"

[build-dependencies]
built = "0.7.7"
