[package]
name = "serverness-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "serverness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
toml_edit = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
serverness = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
dropshot = { workspace = true }

[build-dependencies]
built = "0.7.7"
