[package]
name = "serverness-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
ctrlc = "3.4.5"
futures.workspace = true
indoc = "2.0.5"
serverness.workspace = true
nu-cli = { version = "0.102.0", features = ["plugin"] }
nu-cmd-base = "0.102.0"
nu-cmd-extra = "0.102.0"
nu-cmd-lang = "0.102.0"
nu-cmd-plugin = "0.102.0"
nu-command = { version = "0.102.0", features = ["plugin"] }
nu-engine = "0.102.0"
nu-explore = "0.102.0"
nu-parser = "0.102.0"
nu-path = "0.102.0"
nu-plugin = "0.102.0"
nu-plugin-engine = "0.102.0"
nu-protocol = "0.102.0"
nu-system = "0.102.0"
nu-utils = "0.102.0"
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.43.0", features = ["full"] }
uuid.workspace = true
